Fix search result overflow the page

--- a/themes/landscape/source/css/_partial/header.styl
+++ b/themes/landscape/source/css/_partial/header.styl
@@ -163,6 +163,7 @@ $nav-link
     color: color-red
   ul.search-result-list li
     padding: 5px 0px
+    word-wrap: break-word;
     &:not(:last-child)
       border-bottom: 1px dashed color-border
 
